--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Chien-Yi Wang
 # description: the profile of an engineer, researcher and software developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/cover_photo.jpg
+avatar: images/cover_photo.png
 
 #
 # Flags below are optional
